--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
   "dependencies": {
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^4.6.7",
+    "react": "^15.3.2",
+    "react-tap-event-plugin": "^1.0.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   }
 }
