--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/IAlexandr/building-texture-editor-transfer#readme",
   "dependencies": {
+    "arcgis-api-client": "^1.0.1",
+    "async": "^2.1.2",
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -27,6 +29,10 @@
     "mongoose": "^4.6.7",
     "react": "^15.3.2",
     "react-tap-event-plugin": "^1.0.0",
+    "simplify-js": "^1.2.1",
+    "sphericalmercator": "^1.0.5",
+    "terraformer-arcgis-parser": "^1.0.5",
+    "turf-area": "^3.0.12",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
