fix копирование строений из fs

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sphericalmercator": "^1.0.5",
     "terraformer-arcgis-parser": "^1.0.5",
     "turf-area": "^3.0.12",
+    "uuid": "^2.0.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
